--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "author": "Youssef Kababe",
   "dependencies": {
+    "moment": "^2.10.6",
     "riot": "^2.3.12",
     "skeleton-css": "^2.0.4",
     "superagent": "^1.5.0",
