--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Youssef Kababe",
   "dependencies": {
     "moment": "^2.10.6",
+    "redux": "^3.0.5",
     "riot": "^2.3.12",
     "skeleton-css": "^2.0.4",
     "superagent": "^1.5.0",
